--- a/index.html
+++ b/index.html
@@ -24,19 +24,43 @@
   <meta name="description" content="Comida caseira congelada para a semana toda. Temos mais de 20 opções de pratos.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Montserrat:wght@400;700&display=swap');
+    h1, h2, h3, h4 {
+      font-family: 'Merriweather', serif;
+    }
+    body {
+      font-family: 'Montserrat', sans-serif;
+    }
+    .smaller {
+      font-size: 12px;
+    }
+  </style>
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PN7NBFB"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-  <div class="container">
+  <div class="container-fluid">
+    <header>
+      <div class="row py-3">
+        <div class="col-md-2 offset-md-2 d-flex justify-content-center">
+          <a class="navbar-brand" href="#">
+            <img src="assets/img/logo-caseiros-itinerante.svg" alt="" width="153" height="72">
+          </a>
+        </div>
+        <div class="col-md-4">
+          <div class="pt-4">
+            <h1 class="lh-1 mb-0 fs-4">Comida caseira de qualidade</h1>
+            <p class="mb-0 smaller">ENTRAGA GRÁTIS EM PIEDADE, CANDEIAS E BARRA DE JANGADA</p>
+          </div>
+        </div>
+      </div>
+    </header>
     <div class="row">
       <div class="col-md-7">
-        <h1 class="lh-1">Caseiros Itinerante</h1>
-        <h2 class="fs-4 lh-1">Comida caseira de qualidade</h2>
-        <p>Confira nossos pratos abaixo:</p>
-
+        <h2>Confira nossos pratos abaixo:</h2>
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
