--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     .smaller {
       font-size: 12px;
     }
+    .hero-box {
+      min-height: 480px;
+      background-image:url(assets/img/hero@1x.webp);
+    }
   </style>
 </head>
 <body>
@@ -44,7 +48,7 @@
   <!-- End Google Tag Manager (noscript) -->
   <div class="container-fluid">
     <header>
-      <div class="row py-3">
+      <div class="row py-1">
         <div class="col-md-2 offset-md-2 d-flex justify-content-center">
           <a class="navbar-brand" href="#">
             <img src="assets/img/logo-caseiros-itinerante.svg" alt="" width="153" height="72">
@@ -55,6 +59,19 @@
             <h1 class="lh-1 mb-0 fs-4">Comida caseira de qualidade</h1>
             <p class="mb-0 smaller">ENTRAGA GRÁTIS EM PIEDADE, CANDEIAS E BARRA DE JANGADA</p>
           </div>
+        </div>
+      </div>
+      <div class="row align-items-center hero-box">
+        <div class="col-md-5 offset-md-2">
+          <h2 class="fs-1 text-light">Cozinhar dá bastante trabalho não é?</h2>
+            <div class="d-flex">
+              <img src="assets/img/panelinha.svg" alt="" width="153" height="72">
+              <p class="fs-4 text-light">Então relaxa, deixa que a gente faz as melhores comidinhas caseiras para você</p>
+            </div>
+            <div class="d-flex g-2 justify-content-center">
+              <a href="" class="btn btn-success me-4">Saiba mais</a>
+              <a href="" class="btn btn-warning">veja nossos pratos</a>
+            </div>
         </div>
       </div>
     </header>
